skin/frontend/creo/default/style-ar.css
/* ... */
.column-holder .text-area {
    padding: 0 6px 0 0;
}
.products-grid .text-area .product_name {
    float: right;
    }
.products-grid .text-area .price {
    float: left;
    text-align: left;
}
.products-grid li {
    float: right;
    margin: 0 0 30px 1%;
}
/*.category_top_filters .sort-by select {
direction: rtl;
}
#fme_filters_list .cate-open-close .opener:before {
    left: 5px;
    right: 0;
}
#fme_filters_list .cate-open-close .opener {
    padding: 1px 8px 1px 20px;
}
#fme_filters_list .cate-open-close {
    direction: rtl;
}
.cate-open-close.label_gender {
    right: 0;
}
#fme_filters_list .cate-open-close #label_gender {
    margin-right: -13px;
}*/
#fme_filters_list {
    direction: rtl;
}
.cate-open-close.label_gender {
    right: 0;
}
#fme_filters_list #label_gender {
    padding: 1px 0px 1px 20px;
}
#fme_filters_list .cate-open-close #label_gender.opener:before {
    content: ':';
    border: 0;
    top: 0;
    right: auto;
    left: 5px;
}
#fme_filters_list ul#gender {
    direction: ltr;
}
#fme_filters_list #label_design_category{
	    padding: 1px 8px 1px 20px;
}
#fme_filters_list #label_design_category:before {
    left: 5px;
    right: auto;
}
#fme_filters_list .search-by {
    padding: 3px 10px;
    margin-right: 0;
    margin-left: 5px;
}
.category_top_filters .sort-by label {
    margin: 0 0 0 5px;
}
.cloud-zoom-big {
    left: -375px !important;
}

.cart-table-area .alignleft {
    float: right;
    margin: 0 0px 0 10px;
}
.checkout-cart-index #shopping-cart-table .text-area a.edititem,
.checkout-cart-index #shopping-cart-table .text-area a.btn-remove {
    float: left;
}
.checkout-cart-index .cart-table-area dl {
    float: right !important;
}
.cart-table-area h3 {
    text-align: right;
}
#checkout-review-table tr {
    display: table-row;
}
.cart-table-area h3 {
    text-align: right;
}
.cart-table-area img {
    float: right !important;
    margin: 0 0px 0 14px !important;
}
#checkout-review-table tr td.last:after {
    right: auto;
    left: 0;
}
.onestepcheckout-index-index .discount-form .leftSide label{
	    text-align: right;
}
.onestepcheckout-index-index .discount-form .leftSide {
    float: right;
}
.onestepcheckout-index-index .discount-form .buttons-set {
    float: left;
}
.credit-card span.fake-select, .checkout-form .form-group span {
    right: auto;
    left: 0;
}
.checkout-form .form-group select{
    padding-right: 10px;
    padding-left: 30px;
}
.showShippingAddressCheckboxDiv img {
    float: right !important;
}
.showShippingAddressCheckboxDiv input {
    float: right;
    margin-left: 0;
    margin-top: 4px !important;
}
.category-products .toolbar .sort-by {
    float: left;
}
#bill_form sup, #ship_form sup {
    margin: 22px 6px 0 0;
    float: right;
    color: rgb(255, 0, 0);
}
.showShippingAddressCheckboxDiv {
    padding: 10px 30px 10px 0 !important;
}
.checkoutcreatNewAccount input {
    float: right;
    margin: 0 0px 0 10px;
}
.checkoutShippingMethod {
    padding: 0 32px;
}
.checkoutShippingMethod ul li input {
    margin: 6px 0px 0 8px !important;
}
div#checkout-payment-method-load {
    padding: 0 32px;
}
div#checkout-review-load {
    padding: 0 32px;
}
#review-buttons-container {
    padding: 0 32px 0 0;
}
h1.category--heading:after {
    content: "";
    clear: both;
    display: block;
}
h1.category--heading .sort-by {
    float: left;
}
h1.category--heading .sort-by label {
    background: rgb(239, 79, 97);
    color: rgb(255, 255, 255);
    padding: 3px 10px;
    margin-right: 5px;
    font-weight: 100;
    font-size: 12px;
}
h1.category--heading .sort-by select {
    width: auto;
    height: auto;
    line-height: 1.5;
    font-size: 13px;
    color: rgb(34, 34, 34);
    text-transform: uppercase;
    border: 1px solid rgb(204, 204, 204);
    padding: 2px 5px;
}
#fme_filters_list .cate-open-close #label_phone_model.opener{margin-right:110px;}
@media only screen and (max-width: 1199px){

}
@media only screen and (max-width: 991px){
#header{margin-bottom:0;}
.search-form{right:inherit;left:0;top: 20px;}
a.headerLogin{margin:5px 0;}
}

